Hooked up search form history, map data on first load, and other search form elements

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "pretest": "npm run compile",
     "posttest": "npm run check",
     "uglify": "npm run uglify-main; npm run uglify-search; npm run uglify-home",
-    "uglify-main": "uglifyjs --compress --output=./build/assets/js/goodmoves/main.js ./build/assets/js/cookieinfo.min.js ./build/assets/js/class-inheritance.js ./build/assets/js/goodmoves/site-controller.js",
+    "uglify-main": "uglifyjs --compress --output=./build/assets/js/goodmoves/main.js ./build/assets/js/jquery-deserialize.js ./build/assets/js/cookieinfo.min.js ./build/assets/js/class-inheritance.js ./build/assets/js/goodmoves/site-controller.js",
     "uglify-home": "uglifyjs --compress --output=./build/assets/js/goodmoves/home.js ./build/assets/js/goodmoves/typeahead-controller.js ./build/assets/js/goodmoves/search-terms-controller.js ./build/assets/js/goodmoves/home-controller.js",
     "uglify-search": "uglifyjs --compress --output=./build/assets/js/goodmoves/search.js ./build/assets/js/goodmoves/typeahead-controller.js ./build/assets/js/goodmoves/search-terms-controller.js ./build/assets/js/goodmoves/vacancies-controller.js ./build/assets/js/goodmoves/map-controller.js ./build/assets/js/goodmoves/search-controller.js"
   },
