Initial setup of getinvolved

--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -31,3 +31,9 @@ dispatch:
 
   - url: "scotlandforeurope.scot/*"
     service: scvo-frontend
+
+  - url: "getinvolved.scot/*"
+    service: scvo-frontend
+
+  - url: "getinvolved.org.uk/*"
+    service: scvo-frontend
