--- a/package.json
+++ b/package.json
@@ -53,9 +53,12 @@
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "date-fns": "^1.29.0",
     "dot-object": "^1.7.0",
     "express": "^4.16.2",
     "firebase-admin": "^5.12.0",
+    "googleapis": "^30.0.0",
+    "jsforce": "^1.8.4",
     "livereload": "^0.7.0",
     "nsfw": "^1.0.16",
     "pdfmake": "^0.1.36",
@@ -70,6 +73,7 @@
     "@types/dot-object": "^1.5.0",
     "@types/elasticsearch": "^5.0.22",
     "@types/express": "^4.11.1",
+    "@types/jsforce": "^1.8.10",
     "@types/node": "^9.6.5",
     "@types/q": "^1.0.7",
     "@types/request": "^2.47.0",
