--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@scvo/router-destination-redirect": "0.0.7",
     "@scvo/router-task-elasticsearch": "0.0.16",
     "@scvo/router-task-firebase": "0.0.2",
+    "@scvo/router-task-mysql": "^0.0.3",
+    "@scvo/router-task-transform": "^0.0.3",
     "@types/cookie-parser": "^1.4.1",
     "body-parser": "^1.18.2",
     "chalk": "^2.3.1",
