--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "author": "Matthew Wilkes (https://scvo.org.uk)",
   "license": "GPL-3.0",
   "dependencies": {
-    "@scvo/router": "^1.2.1",
+    "@scvo/router": "^1.2.6",
     "@scvo/router-destination-handlebars": "0.0.29",
     "@scvo/router-destination-redirect": "0.0.7",
     "@scvo/router-task-elasticsearch": "0.0.16",
@@ -61,6 +61,7 @@
     "express": "^4.16.2",
     "firebase-admin": "^5.12.1",
     "googleapis": "^30.0.0",
+    "handlebars": "^4.0.11",
     "jsforce": "^1.8.4",
     "livereload": "^0.7.0",
     "moment": "^2.22.2",
