--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,13 @@
 service: scvo-frontend
-env: flex
+env: flexible
 runtime: nodejs
+api_version: '1.0'
+threadsafe: true
 
 manual_scaling:
-  instances: 2 
+  instances: 2
+
+network: {}
 
 resources:
   cpu: 1
