Adding json-inc to dev dependencies

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "string": "^3.3.3"
   },
   "devDependencies": {
-    "@scvo/json-inc": "0.0.5",
+    "@scvo/json-inc": "^0.0.14",
     "@types/body-parser": "^1.16.8",
     "@types/chalk": "^2.2.0",
     "@types/compression": "^0.0.35",
