Adding encrypted files (hopefully)

--- a/.gitignore
+++ b/.gitignore
@@ -54,9 +54,10 @@ firebase-debug.log
 /db/db.json
 /db/json
 /db/configurations-compiled
-**/secrets*
-*secrets*
+**/secrets.ts
+*secrets.ts
 /dist/*
+app-engine-service-account.json
 
 # no broken json...
 *.broken
