--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ deploy:
   provider: gae
   keyfile: app-engine-service-account.json
   project: scvo-net
+  on: dev-next
 before_install:
 - openssl aes-256-cbc -K $encrypted_9025fc4e977a_key -iv $encrypted_9025fc4e977a_iv
   -in analytics-secrets.ts.enc -out src/analytics-secrets.ts -d
