Removed tests fail

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=6.11.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "cleanup": "rm -rf ./build/**",
     "copy": "cp ./db/db.json ./build/db.json; cp -r ./assets ./build/assets",
     "sass": "node-sass --include-path=./node_modules ./build/assets/css -o build/assets/css",
