Making typescript local

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "l-redirect": "npm link @scvo/router-destination-redirect",
     "check": "gts check",
     "clean": "gts clean",
-    "compile": "tsc -p .",
+    "compile": "node_modules/typescript/bin/tsc -p .",
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
@@ -87,6 +87,6 @@
     "gts": "^0.5.4",
     "material-components-web": "^0.35.0",
     "node-sass": "^4.7.2",
-    "typescript": "~2.6.1"
+    "typescript": "^2.9.2"
   }
 }
