--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "moment": "^2.22.2",
     "nsfw": "^1.0.16",
     "pdfmake": "^0.1.36",
-    "string": "^3.3.3"
+    "string": "^3.3.3",
+    "typescript": "^2.9.2"
   },
   "devDependencies": {
     "@scvo/json-inc": "^0.0.14",
@@ -86,7 +87,6 @@
     "@types/string": "^0.0.29",
     "gts": "^0.5.4",
     "material-components-web": "^0.35.0",
-    "node-sass": "^4.7.2",
-    "typescript": "^2.9.2"
+    "node-sass": "^4.7.2"
   }
 }
