--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "nsfw": "^1.0.16",
     "pdfmake": "^0.1.36",
     "string": "^3.3.3",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
     "@scvo/json-inc": "^0.0.14",
     "@types/body-parser": "^1.16.8",
     "@types/chalk": "^2.2.0",
