--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_9025fc4e977a_key -iv $encrypted_9025fc4e977a_iv
   -in secrets.tar.enc -out secrets.tar -d
 - tar xvf secrets.tar
+- ls
+- ls ./src
