--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ deploy:
   keyfile: app-engine-service-account.json
   project: scvo-net
   on: dev-next
+  skip_cleanup: true
 before_install:
 - openssl aes-256-cbc -K $encrypted_9025fc4e977a_key -iv $encrypted_9025fc4e977a_iv
   -in secrets.tar.enc -out secrets.tar -d
 - tar xvf secrets.tar
-- ls
-- ls ./src
