Building more on travis and forcing yarn on start up

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ before_install:
   -in secrets.tar.enc -out secrets.tar -d
 - tar xvf secrets.tar
 - rm .gitignore
+install:
+- yarn
+- npm run build
