--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "copy": "cp ./db/db.json ./build/db.json; cp -r ./assets ./build/assets",
     "sass": "node_modules/node-sass/bin/node-sass --include-path=./node_modules ./build/assets/css -o build/assets/css",
     "upgrade-router": "yarn add -E @scvo/router @scvo/router-task-firebase @scvo/router-task-elasticsearch @scvo/router-destination-handlebars @scvo/router-destination-redirect",
-    "build": "yarn; npm run cleanup; npm run compile; npm run build-db; npm run copy; npm run sass; npm run uglify",
+    "build": "npm run cleanup; npm run compile; npm run build-db; npm run copy; npm run sass; npm run uglify",
     "build-db": "node_modules/@scvo/json-inc/bin/json-inc compile --input ./sites/sites.inc.json --output ./sites/sites.json",
-    "start": "npm run build; node build/index.js",
+    "start": "yarn; npm run build; node build/index.js",
     "dev": "npm run build; devmode=true node build/index.js",
     "dev-router": "npm run router; npm run dev",
     "deploy-dispatch": "gcloud app deploy dispatch.yaml --quiet",
