Now manually calling gcloud deploy to use 'gcloud beta'

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,34 @@
 language: node_js
 node_js:
-deploy:
-  provider: gae
-  keyfile: app-engine-service-account.json
-  project: scvo-net
-  on: dev-next
-  skip_cleanup: true
+  - "8.11.1"
+
+cache:
+  yarn: true
+  directories:
+  - "$HOME/google-cloud-sdk/"
+
 before_install:
-- openssl aes-256-cbc -K $encrypted_9025fc4e977a_key -iv $encrypted_9025fc4e977a_iv
-  -in secrets.tar.enc -out secrets.tar -d
-- tar xvf secrets.tar
-- rm .gitignore
+  - openssl aes-256-cbc -K $encrypted_9025fc4e977a_key -iv $encrypted_9025fc4e977a_iv -in secrets.tar.enc -out secrets.tar -d
+  - tar xvf secrets.tar
+
 install:
-- yarn
-- npm run build
+  - yarn
+  - npm run build
+
+before_deploy: 
+  - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
+  - source /home/travis/google-cloud-sdk/path.bash.inc
+  - gcloud --quiet version
+  - gcloud --quiet components update
+  - gcloud auth activate-service-account --key-file app-engine-service-key.json
+  - gcloud config set project scvo-net
+
+deploy:
+  - provider: script
+    script:
+      - gcloud app deploy dispatch.yaml --quiet
+      - gcloud beta app deploy --quiet
+    skip_cleanup: true
+    on:
+      branch: dev-next
+
