gcloud install added to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
 before_deploy: 
   # - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
   # - source /home/travis/google-cloud-sdk/path.bash.inc
+  - curl https://sdk.cloud.google.com | bash
   - gcloud --quiet version
   - gcloud --quiet components update
   - gcloud auth activate-service-account --key-file app-engine-service-key.json
