--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ before_deploy:
 deploy:
   - provider: script
     script:
-      - echo "$(pwd)"
-      - echo "$(ls)"
+      - pwd
+      - ls
       - gcloud app deploy dispatch.yaml 
       - gcloud beta app deploy
     skip_cleanup: true
