--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,15 @@ cache:
 before_install:
   - openssl aes-256-cbc -K $encrypted_9025fc4e977a_key -iv $encrypted_9025fc4e977a_iv -in secrets.tar.enc -out secrets.tar -d
   - tar xvf secrets.tar
+  - gcloud config set app/use_deprecated_preparation True
 
 install:
   - yarn
   - npm run build
 
-before_deploy: 
+before_deploy:
   # - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
-  - rm -rf $HOME/google-cloud-sdk 
+  - rm -rf $HOME/google-cloud-sdk
   - export CLOUDSDK_CORE_DISABLE_PROMPTS=1
   - curl https://sdk.cloud.google.com | bash >/dev/null
   - source /home/travis/google-cloud-sdk/path.bash.inc
