Split health checks

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_deploy:
   - gcloud auth activate-service-account --key-file app-engine-service-account.json
   - gcloud config set project scvo-net
   - gcloud config set app/use_deprecated_preparation True
+  - gcloud beta app update --split-health-checks --project scvo-net
 
 deploy:
   - provider: script
