Resetting app.yaml

--- a/app.yaml
+++ b/app.yaml
@@ -7,13 +7,24 @@ threadsafe: true
 manual_scaling:
   instances: 2
 
-network:
-  name: default
+network: {}
 
 resources:
   cpu: 1
   memory_gb: 1.75
   disk_size_gb: 10
 
-health_check:
-  enable_health_check: False
+readiness_check:
+  path: "/readiness_check"
+  check_interval_sec: 5
+  timeout_sec: 4
+  failure_threshold: 2
+  success_threshold: 2
+  app_start_timeout_sec: 300
+
+liveness_check:
+  path: "/liveness_check"
+  check_interval_sec: 30
+  timeout_sec: 4
+  failure_threshold: 2
+  success_threshold: 2
