--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "pretest": "npm run compile",
     "posttest": "npm run check",
     "uglify": "npm run uglify-main; npm run uglify-search; npm run uglify-home",
-    "uglify-main": "uglifyjs --compress --output=./build/assets/js/goodmoves/main.js ./build/assets/js/jquery-deserialize.js ./build/assets/js/cookieinfo.min.js ./build/assets/js/class-inheritance.js ./build/assets/js/goodmoves/site-controller.js",
-    "uglify-home": "uglifyjs --compress --output=./build/assets/js/goodmoves/home.js ./build/assets/js/goodmoves/typeahead-controller.js ./build/assets/js/goodmoves/home-controller.js",
-    "uglify-search": "uglifyjs --compress --output=./build/assets/js/goodmoves/search.js ./build/assets/js/goodmoves/typeahead-controller.js ./build/assets/js/goodmoves/search-controller.js"
+    "uglify-main": "node_modules/uglify-js/bin/uglifyjs --compress --output=./build/assets/js/goodmoves/main.js ./build/assets/js/jquery-deserialize.js ./build/assets/js/cookieinfo.min.js ./build/assets/js/class-inheritance.js ./build/assets/js/goodmoves/site-controller.js",
+    "uglify-home": "node_modules/uglify-js/bin/uglifyjs --compress --output=./build/assets/js/goodmoves/home.js ./build/assets/js/goodmoves/typeahead-controller.js ./build/assets/js/goodmoves/home-controller.js",
+    "uglify-search": "node_modules/uglify-js/bin/uglifyjs --compress --output=./build/assets/js/goodmoves/search.js ./build/assets/js/goodmoves/typeahead-controller.js ./build/assets/js/goodmoves/search-controller.js"
   },
   "author": "Matthew Wilkes (https://scvo.org.uk)",
   "license": "GPL-3.0",
   "dependencies": {
+    "@scvo/json-inc": "^0.0.14",
     "@scvo/router": "^1.2.6",
     "@scvo/router-destination-handlebars": "0.0.29",
     "@scvo/router-destination-redirect": "0.0.7",
@@ -49,7 +50,20 @@
     "@scvo/router-task-firebase": "0.0.2",
     "@scvo/router-task-mysql": "^0.0.3",
     "@scvo/router-task-transform": "^0.0.3",
+    "@types/body-parser": "^1.16.8",
+    "@types/chalk": "^2.2.0",
+    "@types/compression": "^0.0.35",
     "@types/cookie-parser": "^1.4.1",
+    "@types/cors": "^2.8.3",
+    "@types/dot-object": "^1.5.0",
+    "@types/elasticsearch": "^5.0.22",
+    "@types/express": "^4.11.1",
+    "@types/handlebars": "^4.0.38",
+    "@types/jsforce": "^1.8.10",
+    "@types/node": "^9.6.5",
+    "@types/q": "^1.0.7",
+    "@types/request": "^2.47.0",
+    "@types/string": "^0.0.29",
     "body-parser": "^1.18.2",
     "chalk": "^2.3.1",
     "clayhandlebars": "^3.2.3",
@@ -65,26 +79,13 @@
     "handlebars": "^4.0.11",
     "jsforce": "^1.8.4",
     "livereload": "^0.7.0",
+    "material-components-web": "^0.35.0",
     "moment": "^2.22.2",
+    "node-sass": "^4.7.2",
     "nsfw": "^1.0.16",
     "pdfmake": "^0.1.36",
     "string": "^3.3.3",
     "typescript": "^2.9.2",
-    "@scvo/json-inc": "^0.0.14",
-    "@types/body-parser": "^1.16.8",
-    "@types/chalk": "^2.2.0",
-    "@types/compression": "^0.0.35",
-    "@types/cors": "^2.8.3",
-    "@types/dot-object": "^1.5.0",
-    "@types/elasticsearch": "^5.0.22",
-    "@types/express": "^4.11.1",
-    "@types/handlebars": "^4.0.38",
-    "@types/jsforce": "^1.8.10",
-    "@types/node": "^9.6.5",
-    "@types/q": "^1.0.7",
-    "@types/request": "^2.47.0",
-    "@types/string": "^0.0.29",
-    "material-components-web": "^0.35.0",
-    "node-sass": "^4.7.2"
+    "uglify-js": "^3.4.3"
   }
 }
