Beginnings of local docker

--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
 service: scvo-frontend-dev
 env: flexible
-runtime: nodejs
+runtime: custom
 api_version: '1.0'
 threadsafe: true
 
@@ -15,7 +15,7 @@ resources:
   disk_size_gb: 10
 
 readiness_check:
-  path: "/readiness_check"
+  path: /readiness_check
   check_interval_sec: 5
   timeout_sec: 4
   failure_threshold: 2
@@ -23,7 +23,7 @@ readiness_check:
   app_start_timeout_sec: 300
 
 liveness_check:
-  path: "/liveness_check"
+  path: /liveness_check
   check_interval_sec: 30
   timeout_sec: 4
   failure_threshold: 2
