gts fix before check

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "l-elastic": "npm link @scvo/router-task-elasticsearch",
     "l-handlebars": "npm link @scvo/router-destination-handlebars",
     "l-redirect": "npm link @scvo/router-destination-redirect",
-    "check": "gts check",
+    "check": "gts fix; gts check",
     "clean": "gts clean",
     "compile": "node_modules/typescript/bin/tsc -p .",
     "fix": "gts fix",
