cranking up the verbosity on gcloud deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ before_deploy:
 deploy:
   - provider: script
     script:
-      - gcloud beta app deploy --verbosity=info
+      - gcloud beta app deploy --verbosity=debug
     skip_cleanup: true
     on:
       branch: dev-next
