--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
 service: scvo-frontend-dev
 env: flexible
-runtime: custom
+runtime: nodejs
 api_version: '1.0'
 threadsafe: true
 
@@ -16,7 +16,7 @@ resources:
 
 readiness_check:
   path: /readiness_check
-  check_interval_sec: 5
+  check_interval_sec: 30
   timeout_sec: 4
   failure_threshold: 2
   success_threshold: 2
