--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_deploy:
   - gcloud auth activate-service-account --key-file app-engine-service-account.json
   - gcloud beta app update --split-health-checks --project scvo-net
   - gcloud config set project scvo-net
-    # - gcloud config set app/use_deprecated_preparation True
+  - gcloud config set app/use_deprecated_preparation True
     #
 
 deploy:
