Trying to use Travis GAE again

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,13 +27,20 @@ before_deploy:
   - gcloud beta app update --split-health-checks --project scvo-net
   - gcloud config set project scvo-net
   - gcloud config set app/use_deprecated_preparation True
-    #
 
 deploy:
-  - provider: script
-    script:
-      - gcloud beta app deploy --verbosity=debug
-    skip_cleanup: true
-    on:
-      branch: dev-next
+  provider: gae
+  keyfile: app-engine-service-account.json
+  project: scvo-net
+  on: dev-next
+  skip_cleanup: true
+  verbosity: debug
+
+# deploy:
+  #  - provider: script
+  #  script:
+  #    - gcloud beta app deploy --verbosity=debug
+  #  skip_cleanup: true
+  #  on:
+  #    branch: dev-next
 
