Updated to release branch deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ deploy:
   provider: gae
   keyfile: app-engine-service-account.json
   project: scvo-net
-  on: dev-next
+  on: release
   skip_cleanup: true
   verbosity: debug
 
