--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -37,3 +37,6 @@ dispatch:
 
   - url: "getinvolved.org.uk/*"
     service: scvo-frontend
+
+  - url: "test.fundingscotland.com/*"
+    service: scvo-frontend
