Upgraded router, finished basic saved search functionality

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@scvo/json-inc": "^0.0.14",
-    "@scvo/router": "^1.2.9",
+    "@scvo/router": "^1.2.13",
     "@scvo/router-destination-handlebars": "0.0.29",
     "@scvo/router-destination-redirect": "0.0.7",
     "@scvo/router-task-elasticsearch": "0.0.16",
@@ -58,6 +58,7 @@
     "@types/compression": "^0.0.35",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.3",
+    "@types/deep-diff": "^0.0.31",
     "@types/dot-object": "^1.5.0",
     "@types/elasticsearch": "^5.0.22",
     "@types/express": "^4.11.1",
@@ -67,6 +68,7 @@
     "@types/q": "^1.0.7",
     "@types/request": "^2.47.0",
     "@types/string": "^0.0.29",
+    "arr-diff": "^4.0.0",
     "body-parser": "^1.18.2",
     "chalk": "^2.3.1",
     "clayhandlebars": "^3.2.3",
@@ -74,6 +76,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "date-fns": "^1.29.0",
+    "deep-diff": "^1.0.1",
     "dot-object": "^1.7.0",
     "express": "^4.16.2",
     "firebase-admin": "^5.12.1",
