--- a/sites/configurations/scvo/routes/284-cjs_job_apply.json
+++ b/sites/configurations/scvo/routes/284-cjs_job_apply.json
@@ -2,6 +2,7 @@
   "name": "cjs_job_apply",
   "pattern": "/jobs/community-jobs-scotland/vacancies/:phase/:slug/apply",
   "tasks": [
+    "metaData.commonTasks.authNotRequired",
     {
       "name": "primaryResponse",
       "taskModule": "elasticsearch",
