Upgraded router and added default 404 status code to four_oh_four route

--- a/package.json
+++ b/package.json
@@ -21,12 +21,7 @@
     "clear-cache": "curl -s https://scvo.org.uk/reload-sites",
     "deploy-db": "npm run build-db; firebase database:set -y /contexts ./sites/sites.json; npm run clear-cache",
     "deploy-app": "npm run build; npm run deploy-dispatch; gcloud beta app deploy --quiet; npm run deploy-db",
-    "router": "cd ../router && npm run local && cd ../frontend && npm run l-router && npm run l-elastic && npm run l-handlebars && npm run l-redirect && npm run l-firebase",
-    "l-router": "npm link @scvo/router",
-    "l-firebase": "npm link @scvo/router-task-firebase",
-    "l-elastic": "npm link @scvo/router-task-elasticsearch",
-    "l-handlebars": "npm link @scvo/router-destination-handlebars",
-    "l-redirect": "npm link @scvo/router-destination-redirect",
+    "router": "cd ../router2; npm run fix; npm run check; npm run compile; npm link; cd ../frontend",
     "check": "gts fix; gts check",
     "clean": "gts clean",
     "compile": "node_modules/typescript/bin/tsc -p .",
@@ -46,7 +41,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@scvo/json-inc": "^0.0.14",
-    "@scvo/router": "^1.2.13",
+    "@scvo/router": "^1.2.14",
     "@scvo/router-destination-handlebars": "0.0.29",
     "@scvo/router-destination-redirect": "0.0.7",
     "@scvo/router-task-elasticsearch": "0.0.16",
