Adding secrets tar step to deploy app

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sass": "node_modules/node-sass/bin/node-sass --include-path=./node_modules ./build/assets/css -o build/assets/css",
     "upgrade-router": "yarn add -E @scvo/router @scvo/router-task-firebase @scvo/router-task-elasticsearch @scvo/router-destination-handlebars @scvo/router-destination-redirect",
     "build": "npm run cleanup; npm run compile; npm run build-db; npm run copy; npm run sass; npm run uglify",
+    "secrets": "tar cvf secrets.tar app-engine-service-account.json src/secrets.ts src/analytics-secrets.ts; travis encrypt-file --no-interactive -f secrets.tar",
     "build-db": "node_modules/@scvo/json-inc/bin/json-inc compile --input ./sites/sites.inc.json --output ./sites/sites.json",
     "start": "yarn; npm run build; node build/index.js",
     "dev": "npm run build; devmode=true node build/index.js",
@@ -20,7 +21,7 @@
     "deploy-dispatch": "gcloud app deploy dispatch.yaml --quiet",
     "clear-cache": "curl -s https://scvo.org.uk/reload-sites",
     "deploy-db": "npm run build-db; firebase database:set -y /contexts ./sites/sites.json; npm run clear-cache",
-    "deploy-app": "npm run build; npm run deploy-dispatch; gcloud beta app deploy --quiet; npm run deploy-db",
+    "deploy-app": "npm run build; npm run secrets; npm run deploy-dispatch; gcloud beta app deploy --quiet; npm run deploy-db",
     "router": "cd ../router2; npm run fix; npm run check; npm run compile; npm link; cd ../frontend",
     "check": "gts fix; gts check",
     "clean": "gts clean",
