--- a/sites/configurations/goodmoves/routes/054-settings.json
+++ b/sites/configurations/goodmoves/routes/054-settings.json
@@ -13,6 +13,7 @@
   },
   "tasks": [
     "metaData.commonTasks.authRequired",
+    "metaData.commonTasks.savedSearches",
     {
       "name": "email_days",
       "taskModule": "render",
