--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "nsfw": "^1.0.16",
     "pdfmake": "^0.1.36",
     "string": "^3.3.3",
+    "string-strip-html": "^3.1.0",
     "typescript": "^2.9.2",
     "uglify-js": "^3.4.3"
   }
