Added functional social account linking, needs prettying up

--- a/sites/configurations/goodmoves/routes/054-settings.json
+++ b/sites/configurations/goodmoves/routes/054-settings.json
@@ -40,7 +40,8 @@
             "layout": ">context.metaData.handlebars.layouts.default",
             "parts": {
               "head": ">context.metaData.handlebars.templates.pages_page-head-tags",
-              "body": ">context.metaData.handlebars.templates.account_settings"
+              "body": ">context.metaData.handlebars.templates.account_settings",
+              "foot": ">context.metaData.handlebars.templates.account_settings-foot"
             },
             "contentType": "text/html"
           }
