--- a/sites/configurations/goodmoves/routes/054-settings.json
+++ b/sites/configurations/goodmoves/routes/054-settings.json
@@ -14,6 +14,7 @@
   "tasks": [
     "metaData.commonTasks.authRequired",
     "metaData.commonTasks.savedSearches",
+    "metaData.commonTasks.shortlistIds",
     {
       "name": "email_days",
       "taskModule": "render",
