Sorted out mobile search menus

--- a/sites/configurations/goodmoves/routes/054-settings.json
+++ b/sites/configurations/goodmoves/routes/054-settings.json
@@ -42,7 +42,9 @@
             "parts": {
               "head": ">context.metaData.handlebars.templates.pages_page-head-tags",
               "body": ">context.metaData.handlebars.templates.account_settings",
-              "foot": ">context.metaData.handlebars.templates.account_settings-foot"
+              "foot": ">context.metaData.handlebars.templates.account_settings-foot",
+              "sidebar": ">context.metaData.handlebars.templates.vacancies_search-form"
+
             },
             "contentType": "text/html"
           }
