--- a/sites/configurations/goodmoves/routes/055-settings.json
+++ b/sites/configurations/goodmoves/routes/055-settings.json
@@ -13,8 +13,8 @@
   },
   "tasks": [
     "metaData.commonTasks.authRequired",
-    "metaData.commonTasks.savedSearches",
-    "metaData.commonTasks.shortlistIds",
+    "metaData.commonTasks.searchesData",
+    "metaData.commonTasks.shortlistData",
     {
       "name": "email_days",
       "taskModule": "render",
