--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "author": "Matthew Wilkes (https://scvo.org.uk)",
   "license": "GPL-3.0",
   "dependencies": {
+    "@elastic/datemath": "^4.0.2",
     "@scvo/json-inc": "^0.0.14",
     "@scvo/router": "^1.2.24",
     "@scvo/router-destination-handlebars": "0.0.29",
