Added markdown helper

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "handlebars": "^4.0.11",
     "jsforce": "^1.8.4",
     "livereload": "^0.7.0",
+    "markdown": "^0.5.0",
     "material-components-web": "~0.37.1",
     "moment": "^2.22.2",
     "node-sass": "^4.7.2",
