Added mysql escape helper, fixed salary steps to 1000's and set min and max

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/node": "^9.6.5",
     "@types/q": "^1.0.7",
     "@types/request": "^2.47.0",
+    "@types/sqlstring": "^2.2.0",
     "@types/string": "^0.0.29",
     "arr-diff": "^4.0.0",
     "body-parser": "^1.18.2",
@@ -88,6 +89,7 @@
     "node-sass": "^4.7.2",
     "nsfw": "^1.0.16",
     "pdfmake": "^0.1.36",
+    "sqlstring": "^2.3.1",
     "string": "^3.3.3",
     "string-strip-html": "^3.1.0",
     "typescript": "^2.9.2",
