Startings of email stuff

--- a/sites/configurations/goodmoves/routes/055-settings.json
+++ b/sites/configurations/goodmoves/routes/055-settings.json
@@ -12,9 +12,9 @@
     "context": "results"
   },
   "tasks": [
-    "metaData.commonTasks.authRequired",
-    "metaData.commonTasks.searchesData",
-    "metaData.commonTasks.shortlistData",
+    "context.metaData.commonTasks.authRequired",
+    "context.metaData.commonTasks.searchesData",
+    "context.metaData.commonTasks.shortlistData",
     {
       "name": "email_days",
       "taskModule": "render",
@@ -24,7 +24,7 @@
         "template": ">context.metaData.handlebars.partials.email_days"
       }
     },
-    "metaData.commonTasks.supplimentaryResponses",
+    "context.metaData.commonTasks.supplimentaryResponses",
     {
       "name": "destination",
       "taskModule": "renderLayout",
