--- a/sites/configurations/goodmoves/routes/055-settings.json
+++ b/sites/configurations/goodmoves/routes/055-settings.json
@@ -15,6 +15,7 @@
     "context.metaData.commonTasks.authRequired",
     "context.metaData.commonTasks.searchesData",
     "context.metaData.commonTasks.shortlistData",
+    "context.metaData.commonTasks.notesData",
     {
       "name": "email_days",
       "taskModule": "render",
