Working email prototype with untested mailgun webhook handling

--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -2,6 +2,9 @@ dispatch:
   - url: "scvo.net/*"
     service: default
 
+  - url: "emailer.scvo.net/*"
+    service: scvo-frontend
+
   - url: "scvo.org/*"
     service: scvo-frontend
 
