--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/express": "^4.11.1",
     "@types/handlebars": "^4.0.38",
     "@types/jsforce": "^1.8.10",
+    "@types/json-stringify-safe": "^5.0.0",
     "@types/node": "^9.6.5",
     "@types/q": "^1.0.7",
     "@types/request": "^2.47.0",
@@ -82,6 +83,7 @@
     "gts": "^0.5.4",
     "handlebars": "^4.0.11",
     "jsforce": "^1.8.4",
+    "json-stringify-safe": "^5.0.1",
     "livereload": "^0.7.0",
     "markdown": "^0.5.0",
     "material-components-web": "~0.37.1",
