Get Involved test domain config

--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -38,6 +38,9 @@ dispatch:
   - url: "getinvolved.scot/*"
     service: scvo-frontend
 
+  - url: "test.getinvolved.scot/*"
+    service: scvo-frontend
+
   - url: "getinvolved.org.uk/*"
     service: scvo-frontend
 
