--- a/package.json
+++ b/package.json
@@ -97,5 +97,8 @@
     "string-strip-html": "^3.1.0",
     "typescript": "^2.9.2",
     "uglify-js": "^3.4.3"
+  },
+  "devDependencies": {
+    "mjml": "^4.2.0-beta.2"
   }
 }
