--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "secrets": "tar cvf secrets.tar app-engine-service-account.json src/secrets.ts src/analytics-secrets.ts; travis encrypt-file --no-interactive -f secrets.tar",
     "build-db": "node_modules/@scvo/json-inc/bin/json-inc compile --input ./sites/sites.inc.json --output ./sites/sites.json",
     "start": "yarn; npm run build; node build/index.js",
-    "dev": "npm run build; npm run assets; devmode=true node build/index.js",
+    "dev": "npm run emails; npm run build; npm run assets; devmode=true node build/index.js",
     "dev-router": "npm run router; npm run dev",
     "deploy-dispatch": "gcloud app deploy dispatch.yaml --quiet",
     "clear-cache": "curl -s https://scvo.org.uk/reload-sites",
@@ -27,6 +27,7 @@
     "check": "gts fix; gts check",
     "clean": "gts clean",
     "compile": "node_modules/typescript/bin/tsc -p .",
+    "emails": "node_modules/mjml/bin/mjml sites/configurations/goodmoves/emails/*.mjml -o sites/configurations/goodmoves/emails/; node_modules/mjml/bin/mjml sites/configurations/emailer/emails/*.mjml -o sites/configurations/emailer/partials/bodies/",
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
