--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev-router": "npm run router; npm run dev",
     "deploy-dispatch": "gcloud app deploy dispatch.yaml --quiet",
     "clear-cache": "curl -s https://scvo.org.uk/reload-sites",
-    "deploy-db": "npm run build-db && npm run bump-assets-version && firebase database:set -y /contexts ./sites/sites.json && npm run clear-cache",
+    "deploy-db": "npm run emails; npm run build-db && npm run bump-assets-version && firebase database:set -y /contexts ./sites/sites.json && npm run clear-cache",
     "deploy-app": "npm run build; npm run secrets; npm run deploy-dispatch; gcloud beta app deploy --quiet; npm run deploy-db",
     "bump-assets-version": "cd ../assets && git pull && cd ../frontend && node bump-assets-version.js",
     "router": "cd ../router2; npm run link; cd ../frontend;",
