Fixing cron to work once per minute

--- a/cron.yaml
+++ b/cron.yaml
@@ -13,5 +13,5 @@ cron:
     target: scvo-frontend
   - description: "Email queue processor"
     url: /emailer/process-proxy
-    schedule: every 5 seconds
+    schedule: every 1 minute
     target: scvo-frontend
