Fixed syntax issue in cron.yaml

--- a/cron.yaml
+++ b/cron.yaml
@@ -13,5 +13,5 @@ cron:
     target: scvo-frontend
   - description: "Email queue processor"
     url: /emailer/process-proxy
-    schedule: every 1 minute
+    schedule: every 1 minutes
     target: scvo-frontend
